added new stylr css

--- a/css/hidden.css
+++ b/css/hidden.css
@@ -1,5 +1,5 @@
 h1 {
-    color: red;
+    color: Green;
     text-align: center;
 }
 
@@ -13,8 +13,9 @@ p {
 }
 
 ul {
-  font-size: 18px;
-  line-height: 30px;
+  color: purple;
+  font-size: 15px;
+  line-height: 15px;
   font-style: italic;
 }
 ol {
